[gd_scene load_steps=6 format=2]

[ext_resource path="res://images/menu/Dia2.PNG" type="Texture" id=1]
[ext_resource path="res://scenes/level_selector.gd" type="Script" id=2]
[ext_resource path="res://images/menu/Bevezeto_btn.png" type="Texture" id=3]
[ext_resource path="res://images/menu/Labor_btn.png" type="Texture" id=4]
[ext_resource path="res://images/menu/Roma_btn.png" type="Texture" id=5]

[node name="level_selector" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 1 )
centered = false

[node name="TextureButton" type="TextureButton" parent="."]
margin_left = 255.0
margin_top = 620.0
margin_right = 661.0
margin_bottom = 801.0
texture_normal = ExtResource( 3 )

[node name="TextureButton2" type="TextureButton" parent="."]
margin_left = 761.0
margin_top = 620.0
margin_right = 1167.0
margin_bottom = 801.0
texture_normal = ExtResource( 5 )

[node name="TextureButton3" type="TextureButton" parent="."]
margin_left = 1267.0
margin_top = 620.0
margin_right = 1673.0
margin_bottom = 801.0
texture_normal = ExtResource( 4 )

[connection signal="pressed" from="TextureButton" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="TextureButton2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="TextureButton3" to="." method="_on_Button3_pressed"]
